<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Micropolis</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome to Micropolis!</string>
    <string name="button_send">Home Button</string>
	<string name="tool_ok_btn">OK</string>
	<string name="tool_cancel_btn">Cancel</string>
	<string name="run_sim">Run</string>
	<string name="pause_sim">Pause</string>
	<string name="funds_ind_val">Zero Funds</string>
	<string name="budget">Budget</string>
	<string name="map_overlays">Overlays</string>

	<!-- PickBuilding Dialog -->
	<string name="pickbuilding_caption">Choose Building</string>
	<string name="cancel">Cancel</string>

	<!-- InspectLocation Dialog -->
	<string name="dismiss">Dismiss</string>

	<string-array name="levels_array">
		<item>Easy</item>
		<item>Medium</item>
		<item>Hard</item>
	</string-array>

	<!-- Budget Dialog -->
	<string name="budgetdlg_roadfund_caption">Road Funding (%):</string>
	<string name="budgetdlg_policefund_caption">Police Funding (%):</string>
	<string name="budgetdlg_firefund_caption">Fire Funding (%):</string>

	<!-- Overlays menu -->
	<string name="menu_no_overlay">None</string>
	<string name="menu_popden_overlay">Population Density</string>
	<string name="menu_growthrate_overlay">Growth Rate</string>
	<string name="menu_landvalue_overlay">Land Value</string>
	<string name="menu_crime_overlay">Crime Rate</string>
	<string name="menu_pollute_overlay">Pollution</string>
	<string name="menu_traffic_overlay">Traffic Density</string>
	<string name="menu_power_overlay">Power Grid</string>
	<string name="menu_fire_overlay">Fire Coverage</string>
	<string name="menu_police_overlay">Police Coverage</string>

</resources>
